--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   go_router: ^15.1.2
   hive_flutter: ^1.1.0
   path_provider: ^2.1.5
+  intl: ^0.18.1  
+
 
 dev_dependencies:
   flutter_test:
